[FIX] website: hide mega menu link if its content is not visible
Before this commit, when setting the mega menu content visibility, the
navbar link would still appear even if the user does not have access
to the mega menu content.

This commit hides the navbar link for the mega menu in the mobile and
desktop view when the user does not have access to the mega menu
content, in order to prevent unnecessary elements in the navbar.

Steps to reproduce the issue:
- Add a mega menu element in the navbar
- Open the mega menu
- Set the mega menu content visibility to conditional (logged in)
- Open the website while logged out
(The mega menu link is here but the content is not displayed. However,
the dropdown is still opened but it is empty.)

Alternative steps:
- Disable the mobile visibility of the mega menu content
- Open the mobile menu

task-3992066

closes odoo/odoo#235516

X-original-commit: 1990e2735216c76d29105964c77d2c31b2d5cf40

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1645,6 +1645,10 @@ header {
             display: none;
         }
     }
+
+    .hidden_mega_menu_li {
+        display: none;
+    }
 }
 
 @if o-website-value('header-template') == 'sidebar' {
