--- a/addons/website/static/src/scss/website.edit_mode.scss
+++ b/addons/website/static/src/scss/website.edit_mode.scss
@@ -331,3 +331,10 @@ body.editor_enable {
         color: white !important;
     }
 }
+
+// mega_menu nav
+body.editor_enable {
+    .hidden_mega_menu_li {
+        display: block !important;
+    }
+}
